# ResumeBuilder

./: Cargo.toml
assets/: template.tex
src/: app.rs  generate.rs  lib.rs  main.rs  sections.rs  utils.rs
